Schedule/Gaming/Weekly/V8/README.md

***

# Gaming schedule (weekly)

**Origin:** On Saturday, October 24th 2020, I had to set a schedule to limit my gaming times. I went on a hiatus that lasted over half the month, and then began to return to weekly games, as I was already overloaded with the previous schedule with just 60% of the games.

I have decided to split non-daily games into time slots on certain days. My new limit is 0.5-4.5 hours of gaming a day, 1 hour limit on shooting games (included into total) some game days last more than 4.5 hours, but I try to quit before they get that long.

See my other gaming schedules:

[See the daily schedule](../Daily/README.md)

[See the monthly schedule](../Monthly/README.md)

[See the miscellaneous schedule](../Miscellaneous/README.md)

***

## Game list:

### A

* [AdVenture Capitalist](https://github.com/seanpm2001/SeansLifeArchive_Images_AdCap) (1) Alias: AdCap

* [AdVenture Communist](https://github.com/seanpm2001/SeansLifeArchive_Images_AdVenture_Communist) (2) Alias: AdCom

### B

* [Bakery story](https://github.com/seanpm2001/SeansLifeArchive_Images_Bakery-story) (3)

* [Boom Beach](https://github.com/seanpm2001/SeansLifeArchive_Images_Boom-Beach) (4) Alias: BB

* [Bit City](https://github.com/seanpm2001/SeansLifeArchive_Images_Bit_City_-NimbleBit_Game-) (5)

### C

* [Clash of Clans](https://github.com/seanpm2001/SeansLifeArchive_Images_Clash-of-Clans) (6) Alias: CoC

* [Clash Royale](https://github.com/seanpm2001/SeansLifeArchive_Images_Clash-Royale) (7) Alias: CR

* [City story](https://github.com/seanpm2001/SeansLifeArchive_Images_City-Story) (8)

### D

* [Disco Zoo](https://github.com/seanpm2001/SeansLifeArchive_Images_DiscoZoo) (9) Alias: DZ

### E

* [Egg, Inc.](https://github.com/seanpm2001/SeansLifeArchive_Images_Egg_Inc.) (10)

### F

* [Farm story](https://github.com/seanpm2001/SeansLifeArchive_Images_Farm-Story) (11)

* [Fashion story](https://github.com/seanpm2001/SeansLifeArchive_Images_Fashion-Story) (12)

### G

* This list section is empty

### H

* [Hay day](https://github.com/seanpm2001/SeansLifeArchive_Images_Hay-Day) (13) Alias: HD

### I

<!-- Removed in V8, not a weekly game

Idle Miner Tycoon

!-->

* This list section is empty

### J

<!-- Removed in V8, not a weekly game

Jewels

!-->

* This list section is empty

### K

* This list section is empty

### L

* [Lego Tower](https://github.com/seanpm2001/SeansLifeArchive_Images_LegoTower) (14)

### M

* [Merge Plane](https://github.com/seanpm2001/SeansLifeArchive_Images_Merge-planes) (15)

<!-- Removed in V8, not weekly games

Minecraft

Mari0

!-->

### N

* This list section is empty

### O

* This list section is empty

### P

* [Pet shop story](https://github.com/seanpm2001/SeansLifeArchive_Images_Pet-Shop-Story) (16)

<!-- Removed in V8, not a weekly game

Plants vs. Zombies 2

!-->

* [Pocket Frogs](https://github.com/seanpm2001/SeansLifeArchive_Images_PocketFrogs) (17)

* [Pocket Trains](https://github.com/seanpm2001/SeansLifeArchive_Images_Pocket_Trains) (18)

### Q

* This list section is empty

### R

* [Restaurant Story](https://github.com/seanpm2001/SeansLifeArchive_Images_Restaurant-Story) (19)

### S

* This list section is empty

### T

<!-- Removed in V8, not weekly games

Team Fortress 2

Tiny Tower

!-->

* [Tiny Death Star](https://github.com/seanpm2001/SeansLifeArchive_Images_TinyDeathStar) (20) Alias: TDS

### U

* This list section is empty

### V

* This list section is empty

### W

* This list section is empty

### X

* This list section is empty

### Y

* This list section is empty

### Z

* This list section is empty

20 games total

***

# The daily schedule

[View it here](../Daily/README.md)

***

# The weekly schedule

## Monday:

Pocket day:

> Pocket frogs, Pocket trains

## Tuesday:

Tycoon Tuesday:

> Bit City

Note: as of February 16th 2021, Idle Miner Tycoon has been moved to a monthly schedule, due to excessive play time. The game is now played on the first Tuesday of every month.

## Wednesday:

NimbleBit Wednesday:

> Disco Zoo

> Sky Burger (modern) - Started again on January 2nd 2021, resuming for the first time as a weekly entry on January 6th 2021

> Empty time slot, pick 1 game at random

## Thursday:

Lego day: 

> Lego Tower

Storm day: 

> Restaurant story, Bakery story, Pet shop story, Fashion story, Farm story, City story

## Friday:

Oldschool Friday: 

> Merge Plane

Others:

> Tiny Death Star (started: November 19th 2020, officially: November 20th 2020) Egg, Inc. (started: March 5th 2021)

## Saturday

Economic AdVenture Saturday: 

> AdCap, AdCom

## Sunday:

Supercell Sunday:

> Clash of Clans, Boom Beach, Hay Day, Clash Royale

### End of week

***

# Monthly schedule

The new monthly schedule is for games that shouldn't be played very often. The first game to be added to this is Idle Miner Tycoon, as it was taking up too much time every Tuesday

[View it here](../Monthly/README.md)


***

# The miscellaneous schedule

[View it here](../Miscellaneous/README.md)

***

## Limitations

On Thursday, November 5th 2020, I discovered that all 6 storm8 games no longer let me cheat and have infinite duration on items produced. It glitched out a couple times and let items be preserved for over 2 weeks without paying extra. This doesn't seem to work anymore, and now the sessions are being operated differently.

> Minor update from November 19th 2020: this issue no longer applies to Farm Story (unless the 4 day crop expires before the 8 day point) but I have gotten used to gameplay like this.

2 days are dreaded to me (Friday and Saturday) as my Egg Inc and AdCom/AdCap sessions drag on too long due to procrastination and addiction problems. I have been working for months (as of March 24th 2021) to try and find a fix for these days

***

## Notes

Gameplay is photographed as part of my journaling project, and for stock imagery. Ads are photographed too.

I originally played on a Samsung Galaxy S7 edge from 2016 to November 12th 2020. As of November 13th 2020, I began transitioning gameplay away from the old S7 edge to a new Samsung Galaxy S20 FE I got on November 12th 2020. I really like the phone, there is only 1 part of it I consider a downgrade, which is that I went from a screen resolution of 2560x1440 (horizontal, 1440p) 1440x2560 (vertical, 1440p) to 2000x1080 (horizontal, 1080p) 1080x2000 (vertical, 1080p) the only game I still actively play on my old phone is Jewels, because it isn't compatible with Android 10.0, and I want to max out my score on it before abandoning my old S7 edge

Starting on November 19th 2020, I began to play Tiny Death Star again. As the game proves functional and fun, I have decided to turn it into a weekly thing. I will be playing this game every Friday. The first time I played on the weekly schedule was Friday, November 20th 2020.

***

## Under consideration

* It is under consideration that Lego Tower gameplay should be moved to Wednesday, as Thursday already has 6 games set. It takes me all the way down to 13% battery to successfully play all 7 games under a new style. The con of this is that Wednesday (alonh with Friday) is a lax day, with 3 required games instead of 4. I am unsure if I want to get rid of my only free day.

* It is under consideration if I will resume playing Tiny Tower in 2021 or not. On January 27th 2021, my phone was auto-updated to Android 11. Tiny Tower kept crashing upon trying to play, and I lost my 620+ consecutive day streak. Accidentally a few days later, I found the game worked again, but didn't feel like playing due to my lost progress. I am still trying to gain interest to play again.

> As of March 24th 2021, I have not resumed gameplay. On February 17th 2021, this status post was shortened to save memory. See previous entries for more info.

> I have been starting to consider playing at night again, but at the moment, I am happy to have no major tasks to do after I wrap up GitHub work for the night.

***

***

## File info

File type: `Markdown (*.md)`

File version: `8 (Monday, March 29th 2021 at 3:00 pm)`

Line count (including blank lines and compiler line): `0,520`

***

## File history

Version 1 (Saturday, October 24th 2020 at 8:48 pm)

> Changes:

> * Started the file

> * Added a general description

> * Added a game list

> * Added the weekly schedule

> * Added the `games to pick at random` section

> * No other changes in version 1

Version 2 (Thursday, November 5th 2020 at 9:12 pm)

> Changes:

> * Updated the game list to spread it out more and make it more readable

> * Updated the syntax of the weekly schedule, highlighting, fixing grammar errors, and moving games around

> * Added the `limitations` section

> * Added the `under consideration` section

> * No other changes in version 2

Version 3 (Thursday, November 19th 2020 at 6:53 pm)

> Changes:

> * Updated the schedule

> * Made the `games to pick at random` section into a bulleted list

> * Updated the `limitations` section

> * Added the `notes` section

> * Added the `game history` section

> * Updated the `under consideration` section

> * No other changes in version 3

Version 4 (Friday, November 20th 2020 at 6:18 pm)

> Changes:

> * Added a file history section

> * Updated the game listing, adding in Tiny Death Star to Friday

> * Updated the Friday entry

> * Updated the `notes` section

> * Updated the `game history` section

> * No other changes in version 4

Version 5 (Sunday, January 3rd 2021 at 9:29 pm)

> Changes:

> * Updated file history section

> * Updated the game listing, adding in Sky Burger to Wednesday

> * Updated the Wednesday entry

> * No other changes in version 5

Version 6 (Wednesday, February 17th 2021 at 9:11 pm)

> Changes:

> * Removed 7 instances of Jewels, as it is no longer played daily

> * Updated the weekly Tuesday schedule

> * Added the new monthly schedule

> * Updated the file history section

> * Added the file info section

> * No other changes in version 6

Version 7 (Wednesday, March 24th 2021 at 9:18 pm)

> Changes:

> * Added decision info for Egg Inc. becoming a monthly game

> * Updated the Friday weekly schedule

> * Referenced the `2 dreaded days` under the limitations section

> * Updated the game list

> * Added info on Tiny Tower

> * Added a footer

> * Updated the file history section

> * Added the file info section

> * No other changes in version 7

Version 8 (Monday, March 29th 2021 at 3:00 pm)

> Changes:

> * Updated the title section

> * Updated the weekly schedule section (removed daily and monthly data, added links to all 20 games, updated the game count, added common aliases)

> * Added a redirect section for my daily schedule

> * Added a redirect section for my monthly schedule

> * Added a redirect section for my miscellaneous schedule

> * Removed the monthly schedule

> * Commented out the game history, as it was unmaintained and not necessary

> * Updated the file info section

> * Updated the file history section

> * No other changes in version 8

Version 9 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 9

Version 10 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 10

Version 11 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 11

Version 12 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 12

Version 13 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 13

Version 14 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 14

Version 15 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 15

Version 16 (Coming soon)

> Changes:

> * Coming soon

> * No other changes in version 16

***

## You have reached the end of the README file

( [Back to top](#Top) | [Exit (GitHub)](https://github.com) | [Exit (GistHub, gist.github.com)](https://gist.github.com) )

### EOF

***
